# standard-contracts

./: .coderabbit.yaml  .gitignore  Anchor.toml  Architecture.md  Cargo.toml  GITHUB_SECRETS_SUMMARY.md  LICENSE  PR_DRAFT.md  PR_UPDATE_COMMENT.md  QUICK_COPY_SECRETS.txt  README-CROSSCHAIN-CI.md  README.md  REVIEWER_EXPERIENCE_PREVIEW.md  SECURITY.md  SUBMISSION.md  TEST_RESULTS_SUMMARY.md  generate-secrets-simple.ps1  generate-secrets.ps1  generate-secrets.sh  package-lock.json  package.json  readme.md  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: build.yaml  build.yml  crosschain-ci.yml  devnet-deploy.yml  localnet.yaml  publish-npm.yaml  semantic-pr.yaml  slither.yaml  test.yaml  test.yml
client/: index.js
contracts/: commands-utils.ts
contracts/messaging/: .gitignore  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/messaging/contracts/: Example.sol  Messaging.sol  UniversalRouter.sol
contracts/messaging/scripts/: localnet.sh
contracts/messaging/tasks/: connect.js  connect.ts  connectedSetConnected.ts  (+4 more)
contracts/nft/: .gitignore  README.md  foundry.toml  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  proof-report.json  tsconfig.json
contracts/nft/contracts/solana/: .env.example  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/nft/contracts/solana/config/: networks.json
contracts/nft/contracts/solana/docs/: API.md  API_REFERENCE.md  TROUBLESHOOTING.md  deployment-guide.md  integration-examples.md
contracts/nft/contracts/solana/examples/: README.md  client-integration.ts  frontend-integration.tsx  test-scenarios.ts
contracts/nft/contracts/solana/monitoring/: health-check.ts
contracts/nft/contracts/solana/programs/universal-nft/: Cargo.toml
contracts/nft/contracts/solana/programs/universal-nft/src/: errors.rs  events.rs  gateway.rs  lib.rs  metaplex.rs  security.rs  state.rs  utils.rs
contracts/nft/contracts/solana/programs/universal-nft/src/callbacks/: callback_validator.rs  cross_chain_callback.rs  mod.rs
contracts/nft/contracts/solana/programs/universal-nft/src/context/: collection.rs  initialize.rs  mint_nft.rs  mod.rs  on_call.rs  on_revert.rs  reserve_next_token_id.rs  restore_returning_nft.rs  transfer_to_zetachain.rs  update_config.rs
contracts/nft/contracts/solana/programs/universal-nft/src/error/: mod.rs
contracts/nft/contracts/solana/programs/universal-nft/src/event/: collection.rs  config.rs  cross_chain.rs  mod.rs  nft_lifecycle.rs  origin.rs
contracts/nft/contracts/solana/programs/universal-nft/src/instructions/: cross_chain_bridge.rs  init.rs  initialize_collection.rs  mint_nft.rs  mod.rs  modify_settings.rs  on_call.rs  on_revert.rs  set_connected.rs  set_universal.rs  token_reservation.rs  transfer_cross_chain.rs  universal_nft_minting.rs
contracts/nft/contracts/solana/programs/universal-nft/src/operations/: metadata_operations.rs  mod.rs  token_operations.rs
contracts/nft/contracts/solana/programs/universal-nft/src/state/: config.rs  metadata.rs  mint_ticket.rs  mod.rs  nft_origin.rs
contracts/nft/contracts/solana/programs/universal-nft/src/transaction_logs/: bridge_logs.rs  callback_events.rs  mod.rs
contracts/nft/contracts/solana/programs/universal-nft/src/util/: bridge_constants.rs  bridge_operations.rs  constants.rs  cross_chain_helpers.rs  data_decoder.rs  gateway_helpers.rs  inter_chain_helpers.rs  metaplex_helpers.rs  mint_helpers.rs  mod.rs
contracts/nft/contracts/solana/scripts/: deploy-devnet.ts  deploy-local.ts  deploy-production.ts  local-solana.ts  production-deploy.ts  test-cross-chain.ts  test-direct.js  test-local.js  test-nft.js  test-simple.js  test-universal-nft.js  validate-deployment.ts
contracts/nft/contracts/solana/sdk/: client.ts  types.ts
contracts/nft/contracts/solana/tests/: gateway-integration.ts  nft-origin-system.ts  origin-edge-cases.ts  universal-nft-clean.ts  universal-nft-cycle.ts  universal-nft-simple.ts  universal-nft.ts
contracts/nft/contracts/solana/tests/integration/: production-readiness.ts
contracts/nft/contracts/solana/universal_nft/: Anchor.toml  Cargo.toml  README.md
contracts/nft/contracts/solana/universal_nft/programs/universal_nft/src/: lib.rs
contracts/solana/: README.md
contracts/solana/universal-nft/programs/universal-nft-program/: Cargo.toml
contracts/solana/universal-nft/programs/universal-nft-program/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
contracts/solana/universal-nft/programs/universal-nft-program/src/instructions/: burn_for_cross_chain.rs  gateway_handlers.rs  initialize_program.rs  mint_from_cross_chain.rs  mint_nft.rs  update_config.rs
contracts/token/: .gitignore  README.md  hardhat.config.js  hardhat.config.ts  package.json
docs/: security.md  solana_universal_nft_architecture.md  step-by-step.md
program/: Cargo.toml
program/src/: lib.rs
program/tests/: mint.rs
protocol-contracts-solana/: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  PROJECT_STATUS.md  README.md  SECURITY.md  deploy.sh  package-lock.json  package.json  temp_handle_incoming.rs  tsconfig.json
protocol-contracts-solana/programs/universal_nft/: Cargo.toml  README.md
protocol-contracts-solana/programs/universal_nft/src/: handle_incoming.rs  lib.rs  mint.rs  on_call.rs  utils.rs
protocol-contracts-solana/programs/universal_nft/src/instructions/: burn.rs  handle_incoming.rs  mint.rs  mod.rs  on_call.rs  send_to_zeta.rs  setup_gateway.rs
protocol-contracts-solana/programs/universal_nft/src/ix/: handle_incoming.rs  mint.rs  mod.rs  on_call.rs
protocol-contracts-solana/programs/universal_nft/src/state/: gateway.rs  mod.rs  nft_origin.rs  replay.rs
protocol-contracts-solana/scripts/: test-universal-nft.ts
protocol-contracts-solana/tests/: setup.ts  universal_nft.ts
scripts/: build.sh
solana-universal-nft/: .gitkeep
solana-universal-nft/client/: index.js
solana-universal-nft/program/: Cargo.toml
solana-universal-nft/zetachain/: msg_verifier.rs  zeta_decoder.rs
zetachain/: msg_verifier.rs  zeta_decoder.rs
(+119 files in other folders)
