[package]
name = "universal_nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
no-idl = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18"
mpl-token-metadata = "5.0.0-beta.0"
sha2 = "0.10"

[dev-dependencies]
