[package]
name = "universal_nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
no-idl = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
# Use anchor_lang::solana_program to avoid version conflicts
# solana-program dependency removed per Anchor warning
mpl-token-metadata = "3.4.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
