[workspace]
members = [
    "programs/universal-nft"
]
resolver = "2"

[workspace.dependencies]
# Core Solana dependencies
solana-program = "1.18.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# SPL Token dependencies
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Metaplex dependencies for NFT metadata
mpl-token-metadata = { version = "4.1.2", features = ["no-entrypoint"] }
mpl-bubblegum = { version = "1.3.2", features = ["no-entrypoint"] }

# Cryptographic dependencies for TSS signature verification
# Note: secp256k1 moved to dev-dependencies to avoid BPF build issues
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"

[workspace.dev-dependencies]
# secp256k1 for offline testing only - not included in on-chain builds
secp256k1 = { version = "0.28.0", default-features = false, features = ["recovery"] }

# Serialization and data handling
borsh = "0.10.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error handling and utilities
thiserror = "1.0.50"
anyhow = "1.0.75"

# Cross-chain and gateway dependencies
# Note: ZetaChain SDK may need to be added as git dependency when available
# zetachain-solana-sdk = { git = "https://github.com/zeta-chain/zetachain", branch = "main" }

[workspace.features]
default = ["devnet"]
devnet = []
testnet = []
mainnet = []
production = ["mainnet"]
debug = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true
debug = true

# Production profile for mainnet deployment
[profile.production]
inherits = "release"
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
