[workspace]
members = [
    "programs/universal-nft"
]
resolver = "2"

[workspace.dependencies]
# Core Solana dependencies
solana-program = "1.18.0"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

# SPL Token dependencies
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Metaplex dependencies for NFT metadata - using compatible version
mpl-token-metadata = "3.2.0"
mpl-bubblegum = { version = "1.3.2", features = ["no-entrypoint"] }

# Cryptographic dependencies for TSS signature verification
# Note: secp256k1 moved to dev-dependencies to avoid BPF build issues
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true
debug = true

# Production profile for mainnet deployment
[profile.production]
inherits = "release"
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
