[package]
name = "universal_nft"
version = "0.1.0"
description = "Solana Universal NFT Program for Interoperability with ZetaChain"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
borsh = "0.10"
borsh-derive = "0.10"
mpl-token-metadata = { version = "1.14.3", features = ["no-entrypoint"] }
