[package]
name = "universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain transfers via ZetaChain"
edition = "2021"

[features]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
mpl-token-metadata = "4.1.2"
# Use anchor_lang::solana_program to avoid version conflicts
# solana-program dependency removed per Anchor warning

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[dev-dependencies]
solana-program-test = "~1.18.17"
solana-sdk = "~1.18.17"
tokio = { version = "1.0", features = ["macros"] }
