[package]
name = "universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain transfers via ZetaChain"
edition = "2021"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
solana-program = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.0", features = ["macros"] }
